--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,16 @@
 			<version>1.17.5</version>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-java</artifactId>
+			<version>7.8.1</version>
+		</dependency>
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-junit</artifactId>
+			<version>7.8.1</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
